--- a/src/app/pages/landing-page/search-by-address/search-by-address.component.html
+++ b/src/app/pages/landing-page/search-by-address/search-by-address.component.html
@@ -3,7 +3,7 @@
     <div id='iconList' class="col-md-6">
       <div class="content">
         <h4>Search By Address</h4>
-        <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()"
+        <input type="text" class="form-control" 
           placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
           #search>
         <h3>Beer, Wine and Spirits delivered to your door.</h3>
