--- a/src/app/pages/landing-page/store-locations/store-locations.component.scss
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.scss
@@ -17,3 +17,7 @@
 .store:hover{box-shadow:1px 4px 8px 2px #888888;}
 .store table{ float: left;}
 .store p{ color: rgb(39, 39, 39);}
+
+agm-map {
+    height: 500px;
+  }
