--- a/src/app/pages/landing-page/store-locations/store-locations.component.html
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.html
@@ -7,15 +7,13 @@
             <a class="search-icon">
               <i class="fa fa-search"></i>
             </a>
-            <input autocomplete="off" type="text" placeholder="Location" class="form-control" min-length="4"
-              typeahead-editable="false" />
-            <input type="hidden" min-length="4" value="" />
-
+            <input type="text" class="form-control" placeholder="Search Nearest Location"
+              autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
           </td>
           <td class="filter"><img src="../../../assets/landing-page-images/icon-filter.png"> Filter</td>
         </tr>
       </table>
-      <div class="mtop15 border-bottom" *ngFor="let storeInfo of storeList">
+      <div class="mtop15 border-bottom" *ngFor="let storeInfo of matchedStoreList">
         <div class="row">
           <div class="col-md-12">
             <a class="store" (click)="navToStore(storeInfo)">
@@ -44,7 +42,10 @@
       </div>
     </div>
     <div class="col-md-6">
-      <div #gmap style="width:100%;height:500px"></div>
+      <agm-map [latitude]="latitude" [longitude]="longitude">
+        <agm-marker *ngFor="let storeInfo of matchedStoreList" [latitude]="storeInfo?.store.Latitude" [longitude]="storeInfo?.store.Longitude"></agm-marker>
+      </agm-map>
+
     </div>
   </div>
 </div>
