--- a/src/app/pages/landing-page/footer/footer.component.html
+++ b/src/app/pages/landing-page/footer/footer.component.html
@@ -1,20 +1,15 @@
+<div class="col-md-12 "> 
 <div class="banner">
-    <div class="col-md-12 "><div class="row">
       <div class="col-md-6">
-        <div class="row">
         <div class="col-md-6 footer-logo mtop"><img src="../../../../assets/landing-page-images/footer-logo-bottlerover.png"></div>
         <div class="col-md-6 footer-logo"><img src="../../../../assets/landing-page-images/footer-logo-bottlecapps.png"></div>
-      </div>
       </div>
       <div class="col-md-6 mtop30">300 East Royal Lane, Suite 215, Irving, TX 75039<br>
           469-420-9447 | <a href="bottlecapps.com" target="_blank">bottlecapps.com</a> | <a href="mailto:info@bottlecapps.com">info@bottlecapps.com</a>
           </div>
           <div class="clearfix"></div>
-    </div>
-    <div class="clearfix"></div>
-    </div>
-    <div class="clearfix"></div>
     <div class="col-md-12 mtop30">Copyright &copy; 2019 Critical Telephone Applications, Inc., BOTTLECAPPS TM. All Rights Reserved.</div>
+    <div class="clearfix"></div>
   </div>
   <div class="clearfix"></div>
-    
+</div>
