--- a/src/app/pages/landing-page/home-links/home-links.component.scss
+++ b/src/app/pages/landing-page/home-links/home-links.component.scss
@@ -3,6 +3,5 @@
     } 
 .text-center{ text-align: center; color: #fff;}   
 .icon-block{ height: 150px;}
-h2{ font-size: 3em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
-
-
+h2{ font-size: 4.5em; font-family: Calafia-Regular;}
+p{font-size: 1.4em;}
