--- a/src/app/pages/landing-page/locations/locations.component.scss
+++ b/src/app/pages/landing-page/locations/locations.component.scss
@@ -1,11 +1,11 @@
 .loc-city img{ width: 100%; height: auto; max-width: 100%; }
 .loc-city{ margin-bottom: 30px; position: relative;}
 .loc-city h4{ color: #fff;
-    font-weight: 800;
+    font-weight: normal;
     position: absolute;
     left: 0;
-    top: 50%;
-    font-size: 2em;
+    top: 43%;
+    font-size: 2.8em;
     width: 100%;
     text-align: center;
-    text-transform: uppercase;}
+    text-transform: uppercase;  font-family: 'CubanoRegular';}
