--- a/src/app/pages/landing-page/store/store.component.html
+++ b/src/app/pages/landing-page/store/store.component.html
@@ -1,4 +1,4 @@
-<div class="row margin40">
+<div class="margin40">
   <div class="col-md-12">
     <header class="herotext">
         Are you a liquor store?
