Sunila's UI changes

--- a/src/app/pages/landing-page/store-locations/store-locations.component.html
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.html
@@ -1,4 +1,6 @@
-<div class="col-md-12">
+<app-landing-page-header></app-landing-page-header>
+
+<div class="col-md-12 mtop15">
     <div class="col-md-6">
       <table width="100%">
         <tr>
@@ -45,3 +47,4 @@
 
     </div>
 </div>
+<app-landing-page-footer></app-landing-page-footer>
