--- a/src/app/pages/landing-page/store-locations/store-locations.component.scss
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.scss
@@ -14,7 +14,7 @@
 .icon2 img{ width:100%; height: auto; max-width: 82%;}
 .icon3 img{ width:100%; height: auto; max-width: 42%;}
 .logo-store img{ width: 100%; height: auto; max-width: 78%; border: solid 1px #ccc; padding: 3px; border-radius:50%;}
-.mtop15{ margin-top: 15px;}
+.mtop15{ margin-top: 15px; cursor: pointer;}
 .store{ border-bottom: solid 1px rgb(231, 231, 231); padding: 15px; float: left; min-height: 142px; overflow: hidden; white-space: nowrap; display: inline-table;}
 .store:hover{box-shadow:1px 4px 8px 2px #888888;}
 .store table{ float: left;}
